--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="danger" id="lose">
                 <i class="far fa-times-circle shine"></i>
                 &nbsp; &nbsp;
-                <span>AI Wins - AI rules the world</span>
+                <span>System Wins!</span>
             </div>
         </div>
 
